@@ -11,10 +11,10 @@ import edu.colorado.phet.common.piccolophet.RichPNode;
  * @author Sam Reid
  */
 public class FractionControlNode extends RichPNode {
-    public FractionControlNode( final IntegerProperty numerator, final IntegerProperty denominator ) {
+    public FractionControlNode( final IntegerProperty numerator, final IntegerProperty denominator, final IntegerProperty max ) {
         final RoundedDivisorLine line = new RoundedDivisorLine();
         addChild( line );
-        addChild( new NumeratorWithSpinner( numerator, denominator ) {{
+        addChild( new NumeratorWithSpinner( numerator, denominator, max ) {{
             setOffset( line.getFullBounds().getCenterX() - getFullBounds().getWidth() / 2, line.getFullBounds().getY() - getFullBounds().getHeight() );
         }} );
         addChild( new DenominatorWithSpinner( numerator, denominator ) {{
